rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax06/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		static static void m() { 
			
		} 
	}
}